# Kolam

./: README.md  app.py  kolam_tmp.eps  main.ipynb  main.py  pyproject.toml  requirements.txt  temp.py
data/Testing/: Rangoli Designs for Sankranthi.avif
kolam/: analysis.ipynb  analysis.py  kolam.py  style_transfer.py
static/js/: kolam.js
templates/: analysis.html  design.html  home.html  index.html  index1.html  kolam.html  principles.html  styles.html
